--- a/notebooks/replications.ipynb
+++ b/notebooks/replications.ipynb
@@ -319,6 +319,8 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
+    "### Single firm examples\n",
+    "\n",
     "We start with figure 1 and define a model with a single firm and self cross-holdings of strength $w^s$ and $w^d$ for equity and debt respectively."
    ]
   },
@@ -433,7 +435,7 @@
     "    dVdg = discount(θ) .* dVdA * dAdg\n",
     "    ## Store it in desired format\n",
     "    greeks = Matrix{eltype(dVdg)}(undef, 2*N, 4)\n",
-    "    greeks[:, 1] .= vec(mean(view(dVdg, :, 1:N); dims = 2)) ## Average Delta over all price shocks\n",
+    "    greeks[:, 1] .= vec(sum(view(dVdg, :, 1:N); dims = 2)) ## Total Delta over all price shocks\n",
     "    greeks[:, 2] .= view(dVdg, :, N+1)\n",
     "    ## Theta and rho have an additional contribution (first term of eq. (43)) \n",
     "    greeks[:, 3] .= .- (view(dVdg, :, N+2) .- θ.r .* discount(θ) .* x) ## Note sign convention for Theta\n",
@@ -463,10 +465,10 @@
    "source": [
     "function plotvsextA(net, extA, greeks, what = :Δ)\n",
     "    idx = Dict(:Δ => 1, :V => 2, :Θ => 3, :ρ => 4)\n",
-    "    plt = plot(extA, map(g -> sum(g[:, idx[what]]), greeks), label = \"Value\",\n",
+    "    plt = plot(extA, map(g -> mean(equityview(net, g[:, idx[what]]) .+ debtview(net, g[:, idx[what]])), greeks), label = \"Value\",\n",
     "               xlabel = \"External asset\")\n",
-    "    plot!(plt, extA, map(g -> sum(equityview(net, g[:, idx[what]])), greeks), label = \"Equity\")\n",
-    "    plot!(plt, extA, map(g -> sum(debtview(net, g[:, idx[what]])), greeks), label = \"Debt\")\n",
+    "    plot!(plt, extA, map(g -> mean(equityview(net, g[:, idx[what]])), greeks), label = \"Equity\")\n",
+    "    plot!(plt, extA, map(g -> mean(debtview(net, g[:, idx[what]])), greeks), label = \"Debt\")\n",
     "    plt\n",
     "end"
    ]
@@ -486,6 +488,192 @@
    "metadata": {},
    "source": [
     "Note that figures 1-3 of the paper use analytic formulas for the single firm case. This is not only faster, but also free of Monte-Carlo errors. Yet, it is a nice sanity check that the numerical results reproduce the corresponding part of figure 3 as well."
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "### Network examples\n",
+    "\n",
+    "#### Two firm example\n",
+    "\n",
+    "Figure 4 is actually itself a replication of figure 6 of the paper\n",
+    "\n",
+    "Sabine Karl and Tom Fischer, *Cross-ownership as a structural explanation for over- and underestimation of default probability*, Quantitative Finance, 14:6, 2014.\n",
+    "\n",
+    "We fix parameters and create the two firms network."
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "θ = BlackScholesParams(0.0, 1.0, 1.0)\n",
+    "a₀ = [1.0, 1.0]\n",
+    "twoFirms = XOSModel(spzeros(2, 2), [0.0 0.95; 0.95 0.0], I, [11.3, 11.3])"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "Z = rand(MvNormal(2, 1.0), 750)\n",
+    "A = mapslices(z -> Aτ(a₀, θ, z), Z; dims = 1)\n",
+    "X = mapslices(a -> fixvalue(twoFirms, a), A; dims = 1)\n",
+    "sol = mapslices(x -> solvent(twoFirms, x), X; dims = 1)\n",
+    "V = mapslices(x -> equityview(twoFirms, x) .+ debtview(twoFirms, x), X; dims = 1)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "Coloring by the solvency of both firms, we can replicate our figure."
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "cols = sol[1,:] .+ 2.0 .* sol[2,:]; ## Convert solvencies to different numbers"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "plot(scatter(A[1, :], A[2, :], zcolor = cols, scale = :log10),\n",
+    "     scatter(V[1, :], V[2, :], zcolor = cols, scale = :log10))"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "As in Karl and Fischer (2014) we can fit a log-normal to the values and plot samples from it. This replicates their figure."
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "dist = fit_mle(MvNormal, log.(V)) # Quick and dirty log-normal fit\n",
+    "S = exp.(rand(dist, 1000))\n",
+    "solS = mapslices(s -> s .> twoFirms.d, S; dims = 1)\n",
+    "\n",
+    "plot(scatter(V[1, :], V[2, :], zcolor = cols),\n",
+    "     scatter(S[1, :], S[2, :], zcolor = solS[1,:] .+ 2.0 .* solS[2,:]))"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "#### Erdos-Renyi networks\n",
+    "\n",
+    "Figure 5, 6 and 7 use Erdos-Renyi random graphs. In figure 5 we show different network statistics over initial asset values $a_0$ for several average connectivities $<k>$. In particular, we compute equity value, debt value, total value $= \\mathtt{equity} + \\mathtt{debt}$, default probability, capital ratio $= \\frac{\\mathtt{equity}}{\\mathtt{equity} + \\mathtt{debt}}$ and fraction of external assets $= \\frac{A_{\\tau}}{\\mathtt{equity} + \\mathtt{debt}}$."
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "function figure5(N, wᵈ, what)\n",
+    "    a₀ = range(0, length = 21, stop = 2.5)\n",
+    "    kavg = [0.25, 0.5, 0.75, 1.0, 1.5, 2.5, 4.0]\n",
+    "    θ = BlackScholesParams(0.0, 1.0, 0.4)\n",
+    "\n",
+    "    plt = plot()\n",
+    "    for k in kavg\n",
+    "        net = XOSModel(spzeros(N, N),\n",
+    "                       rescale(erdosrenyi(N, k / N), wᵈ),\n",
+    "                       I, ones(N))\n",
+    "        funcs = Dict(:Equity  => x -> equityview(net, x),\n",
+    "                     :Debt    => x -> debtview(net, x),\n",
+    "                     :Total   => x -> equityview(net, x) .+ debtview(net, x),\n",
+    "                     :Default => x -> solvent(net, x),\n",
+    "                     :Capital => x -> equityview(net, x) ./ (equityview(net, x) .+ debtview(net, x)))\n",
+    "        ## Note: Fraction of external assets not shown here.\n",
+    "        ##       Think about how you could support it ... needs external asset values as well.\n",
+    "    \n",
+    "        vals = [expectation(z -> funcs[what](fixvalue(net, Aτ(a, θ, z))),\n",
+    "                            MonteCarloSampler(MvNormal(N, 1.0)),\n",
+    "                            2500)\n",
+    "                for a in a₀]\n",
+    "        plot!(plt, a₀, map(mean, vals), label = string(\"k_avg = \", k))\n",
+    "    end\n",
+    "    plt\n",
+    "end"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "@time figure5(60, 0.4, :Debt)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "Figure 6 shows the network Greeks. We reuse the function calc_greeks defined above to simplify computations here."
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "function figure6data(N, kavg, wᵈ)\n",
+    "    a₀ = range(0, length = 31, stop = 2.5)\n",
+    "    nextnet = calm(() -> XOSModel(spzeros(N, N),\n",
+    "                                  rescale(erdosrenyi(N, kavg / N), wᵈ),\n",
+    "                                  I, ones(N)),\n",
+    "                   1000) # Draw new network each thousand samples\n",
+    "    greeks = [expectation(Z -> calc_greeks(nextnet(), a .* ones(N), θ, Z),\n",
+    "                          MonteCarloSampler(MvNormal(1, 1.0)),\n",
+    "                          25000)\n",
+    "              for a in a₀]\n",
+    "    nextnet(), a₀, greeks\n",
+    "end\n",
+    "\n",
+    "N = 60\n",
+    "@time netER, extAER, greeksER = figure6data(N, 1.2, 0.4);"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "function figure6(net, extA, greeks, what = :Delta)\n",
+    "    idx = Dict(:Δ => 1, :V => 2, :Θ => 3, :ρ => 4)\n",
+    "    plt = plot(extA, map(g -> mean(equityview(net, g[:, idx[what]]) .+ debtview(net, g[:, idx[what]])), greeks), label = \"Value\",\n",
+    "               xlabel = \"External asset\")\n",
+    "    plot!(plt, extA, map(g -> mean(equityview(net, g[:, idx[what]])), greeks), label = \"Equity\")\n",
+    "    plot!(plt, extA, map(g -> mean(debtview(net, g[:, idx[what]])), greeks), label = \"Debt\")\n",
+    "    plt\n",
+    "end\n",
+    "\n",
+    "figure6(netER, extAER, greeksER, :Δ)"
    ]
   },
   {
