--- a/notebooks/finnetdemo.ipynb
+++ b/notebooks/finnetdemo.ipynb
@@ -8,7 +8,7 @@
     {
      "data": {
       "text/plain": [
-       "\"/home/bertschi/GitRepos/FinNetValu/Project.toml\""
+       "\"/Users/wolfgang/Desktop/Uni/HIWI/Bertschinger/SysRisk/Code/FinNetValu/Project.toml\""
       ]
      },
      "execution_count": 1,
@@ -18,14 +18,27 @@
    ],
    "source": [
     "using Pkg\n",
-    "Pkg.activate(\"/home/bertschi/GitRepos/FinNetValu/\")"
+    "Pkg.activate(\"../\")"
    ]
   },
   {
    "cell_type": "code",
    "execution_count": 2,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "┌ Info: Recompiling stale cache file /Users/wolfgang/.julia/compiled/v1.0/FinNetValu/88Ew8.ji for FinNetValu [2b4a169e-d971-11e8-348f-a5a54fd349b0]\n",
+      "└ @ Base loading.jl:1190\n",
+      "┌ Info: Recompiling stale cache file /Users/wolfgang/.julia/compiled/v1.0/DataFrames/AR9oZ.ji for DataFrames [a93c6f00-e57d-5684-b7b6-d8193f3e46c0]\n",
+      "└ @ Base loading.jl:1190\n",
+      "┌ Info: Recompiling stale cache file /Users/wolfgang/.julia/compiled/v1.0/Plots/ld3vC.ji for Plots [91a5bcdd-55d7-5caf-9e0b-520d859cae80]\n",
+      "└ @ Base loading.jl:1190\n"
+     ]
+    }
+   ],
    "source": [
     "using FinNetValu\n",
     "using ForwardDiff\n",
@@ -756,6 +769,51 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## Testing Barabasi Albert Graph"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 3,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "6×6 SparseMatrixCSC{Float64,Int64} with 18 stored entries:\n",
+       "  [2, 1]  =  1.0\n",
+       "  [3, 1]  =  1.0\n",
+       "  [4, 1]  =  1.0\n",
+       "  [5, 1]  =  1.0\n",
+       "  [1, 2]  =  1.0\n",
+       "  [3, 2]  =  1.0\n",
+       "  [4, 2]  =  1.0\n",
+       "  [5, 2]  =  1.0\n",
+       "  [6, 2]  =  1.0\n",
+       "  [1, 3]  =  1.0\n",
+       "  [2, 3]  =  1.0\n",
+       "  [1, 4]  =  1.0\n",
+       "  [2, 4]  =  1.0\n",
+       "  [1, 5]  =  1.0\n",
+       "  [2, 5]  =  1.0\n",
+       "  [6, 5]  =  1.0\n",
+       "  [2, 6]  =  1.0\n",
+       "  [5, 6]  =  1.0"
+      ]
+     },
+     "execution_count": 3,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "FinNetValu.barabasialbert(6,2)"
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": null,
    "metadata": {},
@@ -765,7 +823,7 @@
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "Julia 1.0.0",
+   "display_name": "Julia 1.0.2",
    "language": "julia",
    "name": "julia-1.0"
   },
@@ -773,7 +831,7 @@
    "file_extension": ".jl",
    "mimetype": "application/julia",
    "name": "julia",
-   "version": "1.0.0"
+   "version": "1.0.2"
   }
  },
  "nbformat": 4,
