example from S. Karl on non-monotonic effect of nominal debt on insurance cost

--- a/notebooks/insurance.ipynb
+++ b/notebooks/insurance.ipynb
@@ -23,9 +23,10 @@
     "using ForwardDiff\n",
     "using Plots\n",
     "using DataFrames\n",
+    "using DataFramesMeta\n",
     "using CSV\n",
     "\n",
-    "pyplot()"
+    "# pyplot()"
    ]
   },
   {
@@ -50,7 +51,7 @@
    "source": [
     "function debtval(net, a₀, θ)\n",
     "    N = numfirms(net)\n",
-    "    expectation(Z -> discount(θ) .* debtview(net, fixvalue(net, Aτ(a₀, θ, Z))),\n",
+    "    expectation(Z -> discount(θ) .* debtview(net, fixvalue(net, Aτ(a₀, θ, Z); m = 0)),\n",
     "                MonteCarloSampler(MvNormal(N, 1.0)),\n",
     "                25000)\n",
     "end\n",
@@ -138,7 +139,7 @@
     "        for logA1 in range(-2, length = 51, stop = 1)\n",
     "            for logA2 in range(-2, length = 51, stop = 1)\n",
     "                A = 10 .^ [logA1, logA2]\n",
-    "                x = fixvalue(net, A)\n",
+    "                x = fixvalue(net, A; m = 0)\n",
     "                debt = debtview(net, x)\n",
     "                sol  = solvent(net, x)\n",
     "                ins = (net.d .- debt) ./ net.d\n",
@@ -168,7 +169,7 @@
     "            θ = BlackScholesParams(r, τ, sigma, Lᵨ)\n",
     "            for a0 in [0.6, 0.8, 1, 1.2]\n",
     "                N = numfirms(net)\n",
-    "                x = expectation(Z -> discount(θ) * fixvalue(net, Aτ(a0, θ, Z)),\n",
+    "                x = expectation(Z -> discount(θ) * fixvalue(net, Aτ(a0, θ, Z); m = 0),\n",
     "                                MonteCarloSampler(MvNormal(N, 1.0)),\n",
     "                                25000)\n",
     "                v = equityview(net, x) .+ debtview(net, x)\n",
@@ -219,13 +220,68 @@
    "execution_count": null,
    "metadata": {},
    "outputs": [],
+   "source": [
+    "@linq CSV.read(\"/tmp/qux.csv\") |>\n",
+    "    transform(in12 = :in1 .+ :in2, lam12 = :lam1 .+ :lam2) |>\n",
+    "    stack([:in1, :in2, :in12]) |>\n",
+    "    with(plot(:di1, :value, group = (:sigma, :a0),\n",
+    "              layout = (5, 3)))"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "Three bank example 6.17 from the thesis of S. Karl showing non-monotonic effect of changes in nominal debt to single firm."
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "ex6_17_net(d₃) = XOSModel([0 0 0.4; 0.2 0 0; 0 0 0], [0 0 0; 0.6 0 0.1; 0 0 0], LinearAlgebra.I, [6, 11.8, d₃])\n",
+    "ex6_17_a = [3, 7.2, 19]"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "ex6_17_data = DataFrame(d₁ = 6, d₂ = 11.8, d₃ = 0.1:0.05:20)\n",
+    "\n",
+    "function foo(d)\n",
+    "    net = ex6_17_net(d)\n",
+    "    debtview(net, fixvalue(net, ex6_17_a))\n",
+    "end\n",
+    "tmp = map(foo, ex6_17_data[:d₃])\n",
+    "\n",
+    "@linq ex6_17_data |>\n",
+    "    transform(r₁ = map(x -> x[1], tmp),\n",
+    "              r₂ = map(x -> x[2], tmp),\n",
+    "              r₃ = map(x -> x[3], tmp)) |>\n",
+    "    transform(in₁ = 1 .- :r₁ ./ :d₁,\n",
+    "              in₂ = 1 .- :r₂ ./ :d₂,\n",
+    "              in₃ = 1 .- :r₃ ./ :d₃) |>\n",
+    "    transform(inall = :in₁ .+ :in₂ .+ :in₃) |>\n",
+    "    with(plot(:d₃, [:in₁, :in₂, :in₃, :inall]))"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
    "source": []
   }
  ],
  "metadata": {
   "@webio": {
-   "lastCommId": "3bb6bdccce7d4ee88a7990b9da238cfe",
-   "lastKernelId": "1d1d003c-e2dd-4f7d-9550-ff114ef18b0e"
+   "lastCommId": "3436c6732ad745168363896e75d8e076",
+   "lastKernelId": "12e4d802-4e25-4489-bf88-96b0a6c89eb0"
   },
   "kernelspec": {
    "display_name": "Julia 1.0.0",
