more on insurance pricing

--- a/notebooks/insurance.ipynb
+++ b/notebooks/insurance.ipynb
@@ -271,6 +271,284 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "### Experiments with AutoDiff"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "using ForwardDiff"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "## Can we take derivatives of expectations?\n",
+    "f(a) = expectation(Z -> Aτ(a, θ, Z), MonteCarloSampler(Normal(0, 1)), 1000)\n",
+    "f([1.0, 2.0])"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "reshape(ForwardDiff.jacobian(f, [1.0, 2.0]), 2, 2, 2)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "θ = BlackScholesParams(0., 1., 0.1)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "## Try on insurance costs ...\n",
+    "di = 0.05:0.05:1.0\n",
+    "din12 = [ForwardDiff.jacobian(di₁ -> insurancecost(create_net(di₁[1], 0.8, 0.6, 0.4), [0.6, 0.6], θ), [x])\n",
+    "         for x in di]\n",
+    "in12 = [insurancecost(create_net(x, 0.8, 0.6, 0.4), [0.6, 0.6], θ) for x in di]"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "plt = plot()\n",
+    "plot!(plt, di, map(sum, din12))\n",
+    "plot!(plt, di, map(sum, in12))\n",
+    "plot!(plt, di, cumsum(map(sum, din12)) .* 0.05)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "### Small benchmarks for NEVA derivatives"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "function bench(N)\n",
+    "    Lᵉ = rand(Uniform(), N)\n",
+    "    L  = rand(Uniform(), N, N) .* (rand(Uniform(), N, N) .< 0.4)\n",
+    "    L[diagind(L)] .= 0\n",
+    "    net = EisenbergNoeModel(Lᵉ, L)\n",
+    "    \n",
+    "    a = rand(Uniform(), N)\n",
+    "    @time Ja = fixjacobian(net, a)\n",
+    "    @time Jb = ForwardDiff.jacobian(a -> fixvalue(net, a; m = 0, xtol = 1e-8, ftol = 1e-8), a)\n",
+    "    Ja, Jb\n",
+    "end"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "Ja, Jb = bench(100)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "sum(Ja; dims = 1)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "sum(Jb; dims = 1)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "all(isapprox(Ja, Jb; rtol = 1e-6))"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "### Systemic insurance\n",
+    "\n",
+    "Here we investigate an example where one bank increases its exposure with another. We evaluate the resulting per euro cost of insurance on all liabilities held outside the banking system."
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "function create_net(di₁, de₁, di₂, de₂)\n",
+    "    d = [di₁ + de₁, di₂ + de₂]\n",
+    "    Mᵈ = [0 (di₂ / d[2]); (di₁ / d[1]) 0]\n",
+    "    XOSModel(spzeros(2,2), Mᵈ, I, d)\n",
+    "end\n",
+    "\n",
+    "function create_net_sym(di, de)\n",
+    "    d = [di + de, di + de]\n",
+    "    Mᵈ = [0 (di / d[2]); (di / d[1]) 0]\n",
+    "    XOSModel(spzeros(2,2), Mᵈ, I, d)\n",
+    "end\n",
+    "\n",
+    "function debtval(net, a₀, θ)\n",
+    "    N = numfirms(net)\n",
+    "    expectation(Z -> discount(θ) .* debtview(net, fixvalue(net, Aτ(a₀, θ, Z); m = 0)),\n",
+    "                MonteCarloSampler(MvNormal(N, 1.0)),\n",
+    "                25000)\n",
+    "end\n",
+    "\n",
+    "function extinsurancecost(di₁, de₁, di₂, de₂, a₀, θ)\n",
+    "    net = create_net(di₁, de₁, di₂, de₂)\n",
+    "    1 .- (debtval(net, a₀, θ) .* [de₁, de₂] ./ [di₁ + de₁, di₂ + de₂]) ./ (discount(θ) .* [de₁, de₂])\n",
+    "end\n",
+    "\n",
+    "function extinsurancecost_sym(di, de, a₀, θ)\n",
+    "    net = create_net_sym(di, de)\n",
+    "    1 .- (debtval(net, a₀, θ) .* [de, de] ./ [di + de, di + de]) ./ (discount(θ) .* [de, de])\n",
+    "end"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "r = 0.0\n",
+    "τ = 1.0\n",
+    "Lᵨ = cholesky([1.0 0; 0 1.0]).L\n",
+    "\n",
+    "di₂ = 0.6\n",
+    "de₂ = 0.4\n",
+    "df = DataFrame(di1 = Float64[], de1 = Float64[], in1 = Float64[], in2 = Float64[], sigma = Float64[], a0 = Float64[])\n",
+    "\n",
+    "for di₁ in range(0.01, length = 11, stop = 0.8)\n",
+    "    for de₁ in range(0.01, length = 5, stop = 0.8)\n",
+    "        for σ in [0.1, 0.2, 0.4]\n",
+    "            θ = BlackScholesParams(r, τ, σ, Lᵨ)\n",
+    "            for a₀ in [0.4, 0.6, 0.8, 1.0]\n",
+    "                ins = extinsurancecost(di₁, de₁, di₂, de₂, a₀, θ)\n",
+    "                push!(df, (di₁, de₁, ins[1], ins[2], σ, a₀))\n",
+    "            end\n",
+    "       end\n",
+    "    end\n",
+    "end\n",
+    "\n",
+    "CSV.write(\"/tmp/insu.csv\", df)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "using RCall\n",
+    "\n",
+    "R\"library(tidyverse)\"\n",
+    "R\"library(ggthemes)\"\n",
+    "R\"library(viridis)\""
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "R\"read_csv(\\\"/tmp/insu.csv\\\") %>%\n",
+    "    mutate(in12 = in1 + in2) %>%\n",
+    "    gather(key, val, matches(\\\"in\\\")) %>%\n",
+    "    ggplot(aes(di1, val,\n",
+    "               color = factor(sigma),\n",
+    "               linetype = factor(a0))) +\n",
+    "    geom_line() +\n",
+    "    facet_grid(de1 ~ key) +\n",
+    "    theme_tufte() +\n",
+    "    scale_color_colorblind()\""
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "df = DataFrame(di = Float64[], de = Float64[], in1 = Float64[], in2 = Float64[], sigma = Float64[], a0 = Float64[])\n",
+    "\n",
+    "for di in range(0.01, length = 11, stop = 0.8)\n",
+    "    for de in range(0.01, length = 5, stop = 0.8)\n",
+    "        for σ in [0.1, 0.2, 0.4]\n",
+    "            θ = BlackScholesParams(r, τ, σ, Lᵨ)\n",
+    "            for a₀ in [0.4, 0.6, 0.8, 1.0]\n",
+    "                ins = extinsurancecost_sym(di, de, a₀, θ)\n",
+    "                push!(df, (di, de, ins[1], ins[2], σ, a₀))\n",
+    "            end\n",
+    "       end\n",
+    "    end\n",
+    "end\n",
+    "\n",
+    "CSV.write(\"/tmp/insu_sym.csv\", df)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "R\"read_csv(\\\"/tmp/insu_sym.csv\\\") %>%\n",
+    "    mutate(in12 = in1 + in2) %>%\n",
+    "    gather(key, val, matches(\\\"in\\\")) %>%\n",
+    "    ggplot(aes(di, val,\n",
+    "               color = factor(sigma),\n",
+    "               linetype = factor(a0))) +\n",
+    "    geom_line() +\n",
+    "    facet_grid(de ~ key) +\n",
+    "    theme_tufte() +\n",
+    "    scale_color_colorblind()\""
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": null,
    "metadata": {},
@@ -280,8 +558,8 @@
  ],
  "metadata": {
   "@webio": {
-   "lastCommId": "3436c6732ad745168363896e75d8e076",
-   "lastKernelId": "12e4d802-4e25-4489-bf88-96b0a6c89eb0"
+   "lastCommId": "9189e8f1a90c4d0e8cb04a411f8ee005",
+   "lastKernelId": "1bbeac11-271e-437c-944b-dabde0c1a937"
   },
   "kernelspec": {
    "display_name": "Julia 1.0.0",
