--- a/notebooks/replications.ipynb
+++ b/notebooks/replications.ipynb
@@ -685,6 +685,10 @@
   }
  ],
  "metadata": {
+  "@webio": {
+   "lastCommId": "49da503907bb4349b2eaf0f0d85d1dd7",
+   "lastKernelId": "937e605b-5e34-4d97-8615-b963184bfb95"
+  },
   "kernelspec": {
    "display_name": "Julia 1.0.0",
    "language": "julia",
