added link to NEVA code

--- a/notebooks/replications.ipynb
+++ b/notebooks/replications.ipynb
@@ -216,7 +216,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "Note that the valuation formula $\\mathbb{V}_{ij} = \\frac{E_j^+}{M_j}$ for the linear debt rank model is actually not correct in the paper as it can exceed one. In practice, this should not be a problem as a firms equity value $E_j$ never exceeds its book equity $M_j$."
+    "Note that the valuation formula $\\mathbb{V}_{ij} = \\frac{E_j^+}{M_j}$ for the linear debt rank model is actually not correct in the paper as it can exceed one. In practice, this should not be a problem as a firms equity value $E_j$ never exceeds its book equity $M_j$. Here, values are clipped between 0 and 1 as in the accompanying code at https://github.com/marcobardoscia/neva"
    ]
   },
   {
@@ -685,6 +685,10 @@
   }
  ],
  "metadata": {
+  "@webio": {
+   "lastCommId": "2922a4516f6546668eea97124b15518c",
+   "lastKernelId": "c3944b9a-cfa9-4ba9-98ed-fbdb8d7ef709"
+  },
   "kernelspec": {
    "display_name": "Julia 1.0.0",
    "language": "julia",
