--- a/TODO
+++ b/TODO
@@ -1,1 +1,6 @@
-- Are we actually using fixvalue(net::FinancialModel, a; m = 0, kwargs...) ?
+Fixes:
+    - Are we actually using fixvalue(net::FinancialModel, a; m = 0, kwargs...) ?
+    - XOS tests are too slow
+
+Features:
+    - Default costs for XOS (fixed point algorithm)
